# timeless

./: .flake8  .gitignore  .windsurfrules.md  LICENSE  README.md  agents.md  pyproject.toml  specification.md
.github/workflows/: ci.yml  publish.yml
.prompt_tracking/: 2025-01-02T14-53-45-repository-completeness-analysis.md  2025-09-03T10-50-43-missing-timeless-repo-keychain.md  2025-09-03T10-52-24-keychain-service-name-change.md  2025-09-03T10-54-19-keychain-structure-correction.md
.windsurf/: config.toml
.windsurf/rules/: prompt-tracking.md
examples/: config-linux.yaml  config-macos.yaml
scripts/: run_ci_locally.sh
tests/unit/: test_cli.py  test_config.py  test_manifest.py  test_platform.py  test_restic_engine.py  test_retention.py
timeless_py/: __init__.py  cli.py  config.py  platform.py  retention.py
timeless_py/engine/: __init__.py  restic.py
timeless_py/manifest/: __init__.py  apps.py  brew.py  mas.py  replay.py
