[build-system]
requires = ["uv"]
build-backend = "uv.uvbuild"

[project]
name = "timeless-py"
version = "0.1.0"
description = "Time Machine-style personal backup orchestrated by Python & uv"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [
    {name = "Timeless Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Environment :: MacOS X",
    "Topic :: System :: Archiving :: Backup",
]

dependencies = [
    "typer[all]",
    "keyring",
    "keyrings.alt",
    "orjson",
    "pycron",
    "python-launchd",
    "pync",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "black",
    "isort",
    "mypy",
    "pytest",
    "pytest-cov",
    "hypothesis",
    "shiv",
]

[project.scripts]
timeless = "timeless_py.cli:app"

[tool.ruff]
target-version = "py311"
line-length = 88
select = ["E", "F", "B", "I"]

[tool.black]
line-length = 88
target-version = ["py311", "py312"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--cov=timeless_py --cov-report=term-missing"
