[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "timevault"
version = "0.1.0"
description = "Time Machine-style personal backup orchestrated by Python & uv"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
    {name = "Dan Rapp", email = "rappdw@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Topic :: System :: Archiving :: Backup",
]

dependencies = [
    "typer",
    "keyring",
    "keyrings.alt",
    "pycron",
    "pycryptodome",
    "pyyaml",
    "rich",
]

[project.optional-dependencies]
macos = [
    "launchd",
    "pync",
]
dev = [
    "ruff",
    "black>=24,<26",
    "isort",
    "mypy",
    "pytest",
    "pytest-cov",
    "hypothesis",
    "shiv",
]

[project.scripts]
timevault = "timeless_py.cli:app"

[project.urls]
Homepage = "https://github.com/rappdw/timeless"
Repository = "https://github.com/rappdw/timeless"

[tool.hatch.build.targets.wheel]
packages = ["timeless_py"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = ["E501"]  # line length enforced by black

[tool.black]
line-length = 88
target-version = ["py311", "py312"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

# Ignore missing imports for external packages without type stubs
[[tool.mypy.overrides]]
module = ["typer.*", "orjson.*", "yaml.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--cov=timeless_py --cov-report=term-missing"
